<resources>
    <string name="app_name">Command Tower</string>

    <string name="name_hint_text">edit name</string>

    <!--Greeting Decision Strings-->
    <string name="opening_greeting_question">Are you looking for a normal or commander game?</string>
    <string name="opening_greeting_support">You can add more players afterward</string>

    <!--Default Strings-->
    <string name="focus_default_life_total">20</string>
    <string name="focus_default_commander_life_total">40</string>
    <string name="empty_counter_default_text">0</string>
    <string name="commander_tax_tracker_default_text">+0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!--Reset Dialog Strings-->
    <string name="reset_dialog_default_message">Reset eh? Did Player One win with 20 life?</string>
    <string name="reset_dialog_yes">Yes</string>
    <string name="reset_dialog_no">No</string>
    <string name="reset_dialog_dont_care">Don\'t care</string>

    <!--Content Description Strings-->
    <string name="add_person_content_description">An icon with a person and a plus symbol</string>
    <string name="refresh_content_description">An icon with a loopy arrow</string>
    <string name="settings_content_description">An icon with gear</string>
    <string name="energy_content_description">An icon for energy</string>
    <string name="experience_content_description">An icon for experience</string>
    <string name="poison_content_description">An icon for poison</string>
    <string name="normal_game_greeting_icon_content_description">An icon for a normal game</string>
    <string name="commander_icon_content_description">An icon for a commander game</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
