<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/utility_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/utility_background"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/add_person_image_view"
        style="@style/UtilityButtonStyle"
        android:contentDescription="@string/add_person_content_description"
        android:src="@drawable/ic_add_person" />

    <ImageView
        android:id="@+id/refresh_image_view"
        style="@style/UtilityButtonStyle"
        android:contentDescription="@string/refresh_content_description"
        android:src="@drawable/ic_refresh" />

    <ImageView
        android:id="@+id/settings_image_view"
        style="@style/UtilityButtonStyle"
        android:contentDescription="@string/settings_content_description"
        android:src="@drawable/ic_settings" />

</LinearLayout>