<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.node_coyote.commanderlifecounter.MainActivity">

    <LinearLayout
        android:id="@+id/main_life_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/owner_life_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="128dp"
            tools:text="20" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_life_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/opponent_life_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="96dp"
            tools:text="20" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/utility_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_person_image_view"
            android:layout_width="@dimen/utility_icon_width"
            android:layout_height="@dimen/utility_icon_height"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/add_person_content_description"
            android:src="@drawable/ic_add_person" />

        <ImageView
            android:id="@+id/refresh_image_view"
            android:layout_width="@dimen/utility_icon_width"
            android:layout_height="@dimen/utility_icon_height"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/refresh_content_description"
            android:src="@drawable/ic_refresh" />

        <ImageView
            android:id="@+id/settings_image_view"
            android:layout_width="@dimen/utility_icon_width"
            android:layout_height="@dimen/utility_icon_height"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/settings_content_description"
            android:src="@drawable/ic_settings" />
    </LinearLayout>

</LinearLayout>
