<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commander_detail_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="@dimen/basic_margin"
        android:padding="@dimen/little_margin">

        <Button
            android:id="@+id/commander_detail_plus_button"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            android:background="@color/transparent"
            android:textSize="28sp"
            tools:text="+" />

        <Button
            android:id="@+id/commander_detail_minus_button"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="@color/transparent"
            android:textSize="28sp"
            tools:text="-" />

        <TextView
            android:id="@+id/detail_life_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="@dimen/basic_margin"
            android:paddingRight="@dimen/basic_margin"
            android:text="@string/empty_counter_default_text"
            android:textSize="@dimen/single_opponent_life_text_view"
            tools:text="20" />
    </FrameLayout>

    <Button
        android:id="@+id/add_subtract_commander_damage"
        android:layout_width="@dimen/commander_detail_button_width"
        android:layout_height="wrap_content"
        android:background="@color/transparent" />

    <TextView
        android:id="@+id/commander_detail_life_view"
        style="@style/CommanderDetailLifeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/little_margin"
        android:text="@string/empty_counter_default_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/detail_commander_tax"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top|end"
        android:text="@string/commander_tax_tracker_default_text"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:hint="@string/name_hint_text"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:padding="8dp"
        tools:text="@string/name_hint_text" />


</android.support.v7.widget.CardView>